# mcp-maven-central-search

./: .aiignore  .dockerignore  .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  Issue-to-Planning-Reference.md  LICENSE  PLANNING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.junie/: guidelines.md
mcp_maven_central_search/: __init__.py  cache.py  central_api.py  config.py  logging_config.py  models.py  pom.py  server.py  versioning.py
tests/: conftest.py
tests/integration/: test_get_declared_dependencies_integration.py  test_get_latest_version_integration.py  test_get_versions_integration.py
tests/unit/: test_cache_inflight_dedupe.py  test_cache_ttl.py  test_central_api_http.py  test_central_api_query_builder.py  test_config.py  test_logging_config.py  test_models.py  test_pom_dependency_extraction.py  test_pom_download.py  test_tool_get_declared_dependencies.py  test_tool_get_latest_version.py  test_tool_get_versions.py  test_versioning_ordering.py  test_versioning_stable_detection.py
